overflow hidden (hopefully fixes horizantal thingy)

--- a/livingWebsite/css/style.css
+++ b/livingWebsite/css/style.css
@@ -66,7 +66,8 @@ body {
   width:100vw;
   height:100vh;
   margin:0;
-  background: linear-gradient(180deg, #6971BB 0%, #6971BB 45.83%, #FFB5BE 100%)
+  background: linear-gradient(180deg, #6971BB 0%, #6971BB 45.83%, #FFB5BE 100%);
+  overflow:hidden;
 }
 
 .firsthello {
@@ -204,6 +205,7 @@ body {
 }
 
 #hsseniorgia {
+  overflow:hidden;
   width:100vw;
   height:100vh;
   background-color:rgb(15, 19, 19);
@@ -225,19 +227,19 @@ body {
 
 #golden {
   position:absolute;
-  width:250px;
-  height:250px;
-  margin-top:300px;
-  left:1000px;
+  width:18vw;
+  height:18vw;
+  margin-top:19vw;
+  margin-left:70vw;
   z-index:2;
 }
 
 #night {
   position:absolute;
-  width:230px;
-  height:330px;
-  margin-top:490px;
-  left:900px;
+  width:15vw;
+  height:22vw;
+  margin-top:29vw;
+  margin-left:60vw;
 }
 
 #thirdabout {
